--- a/attandance/src/main/resources/templates/layout.html
+++ b/attandance/src/main/resources/templates/layout.html
@@ -68,7 +68,8 @@
     $(document).ready(function () {
         let user = getCookie("user");
         let role = getCookie("role");
-        if (user === undefined) {
+        let attendee = getCookie("attendee");
+        if (user === undefined && attendee === undefined) {
             $(".logout").hide();
         } else {
             $(".logout").show();
