--- a/attandance/src/main/resources/static/css/layout.css
+++ b/attandance/src/main/resources/static/css/layout.css
@@ -99,6 +99,7 @@ li a:hover, .active {
     margin-left: 17rem;
 }
 
+/*TODO posunout loader*/
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
@@ -119,7 +120,8 @@ li a:hover, .active {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
-button a {
+
+a {
     text-decoration: none;
 }
 
