--- a/attandance/src/main/resources/templates/attendance/form.html
+++ b/attandance/src/main/resources/templates/attendance/form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tréninky Formulář</title>
+    <link rel="stylesheet" href="../static/css/registration.css" th:href="@{/css/registration.css}">
 </head>
 <body>
 <div th:include="layout.html"></div>
