--- a/attandance/src/main/resources/templates/exhibition/form.html
+++ b/attandance/src/main/resources/templates/exhibition/form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vystoupení Formulář</title>
+    <link rel="stylesheet" href="../static/css/exhibition.css.css" th:href="@{/css/exhibition.css}">
 </head>
 <body>
 <div th:include="layout.html"></div>
