--- a/attandance/src/main/resources/templates/profile/index.html
+++ b/attandance/src/main/resources/templates/profile/index.html
@@ -21,8 +21,8 @@
 
         <table>
             <tr>
-                <th><p>ID uživatele:</p></th>
-                <th><p th:text="${personid}"></p></th>
+                <th><p>Uživatelské jméno:</p></th>
+                <th><p th:text="${user.username}"></p></th>
             </tr>
             <tr>
                 <td><p>Jméno:</p></td>
