--- a/attandance/src/main/resources/templates/attendance/index.html
+++ b/attandance/src/main/resources/templates/attendance/index.html
@@ -30,7 +30,7 @@
                     {
                         "trainingDay": "<a href=/dochazka/" + items[i].trainingid + ">" + items[i].trainingDay + "",
                         "trainingName": items[i].name,
-                        "type": items[i].type === 0 ? "Parkour" : "Other",
+                        "type": items[i].type,
                         "starttime": items[i].starttime,
                         "endtime": items[i].endtime,
                         "hall": items[i].hall.name,
