--- a/attandance/src/main/resources/templates/attendees/index.html
+++ b/attandance/src/main/resources/templates/attendees/index.html
@@ -29,7 +29,7 @@
                     {
                         "firstname": "<a href=/profil/attendee/" + items[i].attendeeid + ">" + items[i].person.firstname + "",
                         "lastname": items[i].person.lastname,
-                        "sex": items[i].sex === 1 ? "Chlapec" : "Dívka",
+                        "sex": items[i].sex,
                         "active": items[i].person.active,
                         "isPaid": items[i].isPaid
                     };
